Skip to content

3.0 regression: MKV demux crash

Attached file crashes VLC:

ASAN:DEADLYSIGNAL
==32514==AddressSanitizer: while reporting a bug found another one. Ignoring.
    [#0](https://code.videolan.org/videolan/vlc/-/issues/0) 0x7fc7120ec2bf  (/home/remi/videolan/vlc/build/modules/.libs/libmkv_plugin.so+0x16e2bf)
    [#1](https://code.videolan.org/videolan/vlc/-/issues/1) 0x7fc71204c30f in matroska_segment_c::EnsureDuration() ../../modules/demux/mkv/matroska_segment.cpp:1068
    [#2](https://code.videolan.org/videolan/vlc/-/issues/2) 0x7fc712051b8f in matroska_segment_c::Preload() ../../modules/demux/mkv/matroska_segment.cpp:690
    [#3](https://code.videolan.org/videolan/vlc/-/issues/3) 0x7fc7120e34b0 in Open ../../modules/demux/mkv/mkv.cpp:143
    [#4](https://code.videolan.org/videolan/vlc/-/issues/4) 0x7fc72eff5c54 in generic_start ../../src/modules/modules.c:349
    [#5](https://code.videolan.org/videolan/vlc/-/issues/5) 0x7fc72eff4cc7 in module_load ../../src/modules/modules.c:183
    [#6](https://code.videolan.org/videolan/vlc/-/issues/6) 0x7fc72eff54bd in vlc_module_load ../../src/modules/modules.c:275
    [#7](https://code.videolan.org/videolan/vlc/-/issues/7) 0x7fc72eff5da5 in module_need ../../src/modules/modules.c:364
    [#8](https://code.videolan.org/videolan/vlc/-/issues/8) 0x7fc72f07ad01 in demux_NewAdvanced ../../src/input/demux.c:259
    [#9](https://code.videolan.org/videolan/vlc/-/issues/9) 0x7fc72f07b5c3 in input_DemuxNew ../../src/input/demux.c:361
    [#10](https://code.videolan.org/videolan/vlc/-/issues/10) 0x7fc72f0d68d9 in InputSourceNew ../../src/input/input.c:2288
    [#11](https://code.videolan.org/videolan/vlc/-/issues/11) 0x7fc72f0c8f3d in Init ../../src/input/input.c:1293
    [#12](https://code.videolan.org/videolan/vlc/-/issues/12) 0x7fc72f0bf677 in Preparse ../../src/input/input.c:512
    [#13](https://code.videolan.org/videolan/vlc/-/issues/13) 0x7fc730a8e463 in start_thread (/lib/x86_64-linux-gnu/libpthread.so.0+0x7463)
    [#14](https://code.videolan.org/videolan/vlc/-/issues/14) 0x7fc7305cd9de in __clone (/lib/x86_64-linux-gnu/libc.so.6+0xe89de)

AddressSanitizer can not provide additional info.
SUMMARY: AddressSanitizer: SEGV (/home/remi/videolan/vlc/build/modules/.libs/libmkv_plugin.so+0x16e2bf) 
Thread T4 created by T3 here:
    [#0](https://code.videolan.org/videolan/vlc/-/issues/0) 0x7fc731d14f59 in pthread_create (/usr/lib/x86_64-linux-gnu/libasan.so.3+0x30f59)
    [#1](https://code.videolan.org/videolan/vlc/-/issues/1) 0x7fc72f1eab1d in vlc_clone_attr ../../src/posix/thread.c:482
    [#2](https://code.videolan.org/videolan/vlc/-/issues/2) 0x7fc72f1eacff in vlc_clone ../../src/posix/thread.c:494
    [#3](https://code.videolan.org/videolan/vlc/-/issues/3) 0x7fc72f0bb8f4 in input_Start ../../src/input/input.c:176
    [#4](https://code.videolan.org/videolan/vlc/-/issues/4) 0x7fc72f0229a7 in Preparse ../../src/playlist/preparser.c:249
    [#5](https://code.videolan.org/videolan/vlc/-/issues/5) 0x7fc72f023869 in Thread ../../src/playlist/preparser.c:363
    [#6](https://code.videolan.org/videolan/vlc/-/issues/6) 0x7fc730a8e463 in start_thread (/lib/x86_64-linux-gnu/libpthread.so.0+0x7463)

Thread T3 created by T0 here:
    [#0](https://code.videolan.org/videolan/vlc/-/issues/0) 0x7fc731d14f59 in pthread_create (/usr/lib/x86_64-linux-gnu/libasan.so.3+0x30f59)
    [#1](https://code.videolan.org/videolan/vlc/-/issues/1) 0x7fc72f1eab1d in vlc_clone_attr ../../src/posix/thread.c:482
    [#2](https://code.videolan.org/videolan/vlc/-/issues/2) 0x7fc72f1eaeef in vlc_clone_detach ../../src/posix/thread.c:544
    [#3](https://code.videolan.org/videolan/vlc/-/issues/3) 0x7fc72f021550 in playlist_preparser_Push ../../src/playlist/preparser.c:118
    [#4](https://code.videolan.org/videolan/vlc/-/issues/4) 0x7fc72efc19bd in libvlc_MetadataRequest ../../src/libvlc.c:631
    [#5](https://code.videolan.org/videolan/vlc/-/issues/5) 0x7fc72f02e736 in GoAndPreparse ../../src/playlist/item.c:818
    [#6](https://code.videolan.org/videolan/vlc/-/issues/6) 0x7fc72f02b67c in playlist_AddInput ../../src/playlist/item.c:511
    [#7](https://code.videolan.org/videolan/vlc/-/issues/7) 0x7fc72f02b4fc in playlist_AddExt ../../src/playlist/item.c:474
    [#8](https://code.videolan.org/videolan/vlc/-/issues/8) 0x7fc72f00b89b in intf_InsertItem ../../src/interface/interface.c:164
    [#9](https://code.videolan.org/videolan/vlc/-/issues/9) 0x7fc72efc1769 in GetFilenames ../../src/libvlc.c:604
    [#10](https://code.videolan.org/videolan/vlc/-/issues/10) 0x7fc72efc0e38 in libvlc_InternalInit ../../src/libvlc.c:484
    [#11](https://code.videolan.org/videolan/vlc/-/issues/11) 0x7fc731a213e3 in libvlc_new ../../lib/core.c:59
    [#12](https://code.videolan.org/videolan/vlc/-/issues/12) 0x560f2b76743d in main ../../bin/vlc.c:228
    [#13](https://code.videolan.org/videolan/vlc/-/issues/13) 0x7fc7305052b0 in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x202b0)
Edited by Rémi Denis-Courmont
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information